@@ -22,6 +22,7 @@ package com.sun.max.vm.value;
 
 import java.io.*;
 
+import com.sun.cri.ci.*;
 import com.sun.max.lang.*;
 import com.sun.max.unsafe.*;
 import com.sun.max.vm.type.*;
@@ -109,7 +110,7 @@ public final class ShortValue extends PrimitiveValue<ShortValue> {
 
     @Override
     public Short asBoxedJavaValue() {
-        return new Short(value);
+        return Short.valueOf(value);
     }
 
     @Override
@@ -205,5 +206,10 @@ public final class ShortValue extends PrimitiveValue<ShortValue> {
     @Override
     public void write(DataOutput stream) throws IOException {
         stream.writeShort(value);
+    }
+
+    @Override
+    public CiConstant asCiConstant() {
+        return CiConstant.forShort(value);
     }
 }
